[gd_scene load_steps=3 format=3 uid="uid://bis7afjjuwypq"]

[ext_resource type="Script" uid="uid://euh8qnxx8snb" path="res://scripts/hud.gd" id="1_yyb01"]
[ext_resource type="Texture2D" uid="uid://c44objcqpu6sl" path="res://assets/textures/hud/line.png" id="2_jon51"]

[node name="HUD" type="CanvasLayer" groups=["hud"]]
script = ExtResource("1_yyb01")

[node name="BackgroundFade" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_right = 1920.0
offset_bottom = 1096.0
color = Color(0.3137255, 0.039215688, 0.4117647, 0.5137255)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lines" type="Sprite2D" parent="Control/HBoxContainer"]
unique_name_in_owner = true
texture_repeat = 2
position = Vector2(960, 536)
texture = ExtResource("2_jon51")
region_enabled = true
region_rect = Rect2(0, 0, 20, 1100)

[node name="PlayerLeftScore" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 240.0
offset_right = 717.0
offset_bottom = 1080.0
pivot_offset = Vector2(240, 176)
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 200
text = "0"
horizontal_alignment = 1

[node name="PlayerRightScore" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1200.0
offset_right = 1677.0
offset_bottom = 1080.0
pivot_offset = Vector2(240, 176)
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 200
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverTexte" type="Label" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "winner"

[node name="SecondBeforeRestart" type="Label" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Restart after 3s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 685.0
offset_top = 808.0
offset_right = 1235.0
offset_bottom = 919.0
tooltip_text = "Leave the game
"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Quit The Game"

[connection signal="pressed" from="Control/VBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
